--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,67 @@
 .App {
-	text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-	height: 40vmin;
-	pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 @keyframes gradientAnimation {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-size: 150% 150%;
+    background-position: 50% 50%;
+  }
+  25% {
+    background-size: 175% 175%;
+    background-position: 75% 25%;
+  }
+  50% {
+    background-size: 200% 200%;
+    background-position: 25% 75%;
+  }
+  75% {
+    background-size: 175% 175%;
+    background-position: 50% 50%;
+  }
+  100% {
+    background-size: 150% 150%;
+    background-position: 50% 50%;
+  }
 }
 
 .gradient-background {
-	background: linear-gradient(to right, #8a2be2, #87cefa);
-	background-size: 200% 100%;
-	animation: gradientAnimation 10s ease infinite;
+  background: radial-gradient(circle at center, #6a5acd, #db7093, #b0c4de);
+  background-size: 150% 150%;
+  animation: gradientAnimation 20s ease infinite;
 }
+
 .App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-	color: #61dafb;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
